10/5/10 remove some dependencies on DielectricModel
10/5/10 specify default locations for meters in CLConstants
# 0.00.26 (44729) Oct 5, 2010
10/5/10 remove stubs for Save/Load feature, not necessary per Noah P
10/5/10 start up with Introduction tab selected
10/5/10 fix: make View controls reset properly
10/5/10 implemented Introduction tab (subclass of Dielectric tab)
10/5/10 implemented Reset All feature
10/5/10 fix: knob on voltage slider and Plate Charge slider jumps to center when you mouseDown on it
10/5/10 decided not to add curvature to field lines on perimeter of plates
10/5/10 make battery voltage slider and Plate Charge slider snap to zero
10/5/10 when E_effective is zero, use zero spacing between +- pairs on dielectric
# 0.00.25 (44692) Oct 4, 2010
10/4/10 first version of dielectric "all charges" view
10/4/10 add convenience method for getting dielectric width, use in views
# 0.00.24 (44686) Oct 4, 2010
10/4/10 use the same min/max for representing top plate charge and dielectric excess charge
10/4/10 make number of excess charges on dielectric proportional to sqrt(Q_excess_dielectric)
10/4/10 move plate charge grid strategy into its own top-level class file
# 0.00.23 (44668) Oct 4, 2010
10/4/10 increase max field lines to 900, per Noah P
10/4/10 first working version of excess dielectric charge view
10/4/10 use better plate charge layout strategy, developed by Sam Reid
10/4/10 factor out nodes for positive and negative charges
10/4/10 first pass at excess dielectric charge, not working yet
# 0.00.22 (44657) Oct 4, 2010
10/4/10 make spacing between e-field lines change continuously as E_effective changes
10/4/10 only update views (charges, field) when visible
# 0.00.21 (44648) Oct 4, 2010
10/4/10 demo new field density algorithm
10/4/10 smaller arrows on field lines
10/4/10 compute field density based on minimum plate area, not based on plate side length
10/4/10 simplify PlateChargeNode.getNumberOfCharges