@@ -12,6 +12,7 @@ checkBox.meter.charge=Plate Charge
 checkBox.meter.energy=Stored Energy
 checkBox.meter.voltmeter=Voltmeter
 checkBox.meter.eFieldDetector=Electric Field Detector
+checkBox.showValues=Show Values
 
 label.separation=Separation
 label.plateArea=Plate Area
@@ -23,6 +24,7 @@ label.plateCharge=Plate Charge (top)
 label.none=none
 label.lotsPositive=lots (+)
 label.lotsNegative=lots (-)
+label.showVectors=Show Vectors
 
 material.custom=custom
 material.teflon=teflon
@@ -52,6 +54,7 @@ tab.multipleCapacitors=Multiple Capacitors
 title.dielectric=Dielectric
 title.view=View
 title.meters=Meters
+title.electricField=Electric Field
 
 units.volts=V
 units.millimeters=mm
@@ -59,3 +62,7 @@ units.millimetersSquared=mm<sup>2</sup>
 units.coulombs=C
 units.farads=F
 units.joules=J
+
+vector.sum=Sum
+vector.plate=Plate
+vector.dielectric=Dielectric
