@@ -1,3 +1,4 @@
+10/5/10 add localized strings used by E-Field Detector
 10/5/10 remove some dependencies on DielectricModel
 10/5/10 specify default locations for meters in CLConstants
 # 0.00.26 (44729) Oct 5, 2010
